remove blue,gray on top to all_template_file

--- a/app/views/home/template2.html.erb
+++ b/app/views/home/template2.html.erb
@@ -136,6 +136,12 @@
 
     padding: 20px;
   }
+  .mdl-layout__header{
+    background-color: white;
+  }
+  .mdl-layout__header-row{
+    background-color: white;
+  }
 </style>
 
 <script>
