--- a/app/views/home/template3.html.erb
+++ b/app/views/home/template3.html.erb
@@ -128,7 +128,12 @@
   .event-card {
     background: white;
   }
-
+  .mdl-layout__header{
+    background-color: white;
+  }
+  .mdl-layout__header-row{
+    background-color: white;
+  }
 </style>
 
 
