--- a/app/views/home/template6.html.erb
+++ b/app/views/home/template6.html.erb
@@ -154,6 +154,12 @@
     padding: 50px;
     padding-top: 20px
   }
+  .mdl-layout__header{
+    background-color: white;
+  }
+  .mdl-layout__header-row{
+    background-color: white;
+  }
 </style>
 
 <script>
