--- a/app/views/home/template7.html.erb
+++ b/app/views/home/template7.html.erb
@@ -172,6 +172,12 @@
 
     background-color: rgba(0,0,0,0);
   }
+  .mdl-layout__header{
+    background-color: white;
+  }
+  .mdl-layout__header-row{
+    background-color: white;
+  }
 </style>
 
 <script>
