--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,14 +19,62 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
-
 </head>
 
 <body id="top">
 
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <a href="/home/contact" id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp blue lighten-2">
+    <i class="material-icons">mail</i>
+  </a>
 
 
-<%= yield %>
+
+  <header class="mdl-layout__header mdl-layout__header--waterfall site-header">
+
+
+    <div class="mdl-layout__header-row site-logo-row">
+
+            <span class="mdl-layout__title">
+
+            <div class="site-logo">
+               <%= image_tag('site-logo.png') %>
+            </div>
+
+            <span class="site-description">Shall we go?</span>
+
+            </span>
+    </div>
+
+
+    <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
+      <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+        <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+        <a class="mdl-navigation__link" href="/home/template3">Pending <br> hang-outs</a>
+        <a class="mdl-navigation__link" href="/home/template4">Create <br> a hang-out</a>
+        <a class="mdl-navigation__link" href="/home/template5">My account</a>
+        <a class="mdl-navigation__link" href="/home/template6">Support</a>
+        <a class="mdl-navigation__link" href="/home/template7">Message</a>
+      </nav>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+      <a class="mdl-navigation__link" href="/home/template1">Home</a>
+      <a class="mdl-navigation__link" href="/home/template1">Hang-outs</a>
+      <a class="mdl-navigation__link" href="/home/template2">Waiting foreign students</a>
+      <a class="mdl-navigation__link" href="/home/template3">Pending hang-outs</a>
+      <a class="mdl-navigation__link" href="/home/template4">Create a hang-out</a>
+      <a class="mdl-navigation__link" href="/home/template5">My account</a>
+      <a class="mdl-navigation__link" href="/home/template6">Support</a>
+      <a class="mdl-navigation__link" href="/home/template7">Message</a>
+    </nav>
+  </div>
+
+  <%= yield %>
+
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
